--- a/nginx.conf
+++ b/nginx.conf
@@ -8,4 +8,8 @@ server {
         index index.html index.htm;
         try_files $uri $uri/ /index.html;
     }
+
+    location /api {
+            proxy_pass http://localhost:7777
+        }
 }
