--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,3 +5,9 @@ services:
       dockerfile: Dockerfile
     ports:
       - "3000:80"
+    networks:
+      - my-network
+
+networks:
+  my-network:
+    external: true
