--- a/nginx.conf
+++ b/nginx.conf
@@ -9,7 +9,11 @@ server {
         try_files $uri $uri/ /index.html;
     }
 
-    location /api {
-            proxy_pass http://localhost:7777
-        }
+    location /api/ {
+        proxy_pass http://api-gateway:7777;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
 }
