--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@babel/preset-env": "^7.19.1",
     "@babel/preset-react": "^7.18.6",
     "babel-loader": "^8.2.5",
+    "copy-webpack-plugin": "^12.0.2",
     "html-webpack-plugin": "^5.5.0",
     "react-css-modules": "^4.7.11",
     "terser-webpack-plugin": "^5.3.6",
